tests/regression/errors/basic/import_error_3.csd
// Import error test 3
yeet "nonexistent_module_3"
sus result drip = some_function(3)
